# fr-acc

./: .gitignore  Cargo.toml  README.md  main.sql
src/: lib.rs  main.rs
src/change_password/: change_pwd.rs  mod.rs
src/config/: config.rs  mod.rs
src/forgotten_password/: forgotten_pwd.rs  mod.rs
src/login/: login.rs
src/routes/: index.rs  mod.rs
src/signup/: signup.rs
src/utils/: mod.rs  utils.rs
src/verification/: mod.rs  verify_account.rs
static/: index.html
